# bekk-func-algos

./: .gitignore  Plan.md  README.md
haskell/: README.md  haskell.cabal
haskell/app/: Api.hs  List.hs  Main  NonEmpty.hs  TestUtil.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
haskell/dist-newstyle/packagedb/ghc-8.10.7/: haskell-0.1.0.0-inplace.conf  package.cache
haskell/lib/: Api.hs  List.hs  Main.hs  NonEmpty.hs
haskell/test/: Main.hs
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/: Either.kt  Main.kt  Map.kt  MyList.kt  NonEmpty.kt
kotlin/src/test/kotlin/: MapKtTest.kt  MapPropKtTest.kt  MyListTest.kt  NonEmptyKtTest.kt
