cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Morten Kolstad
maintainer:         morten.kolstad@bekk.no

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library
    -- main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, containers, QuickCheck, HUnit,
    hs-source-dirs:   app
    default-language: Haskell2010
    exposed-modules:  NonEmpty, TestUtil, Main, List, Api
    -- other-modules:       MyLib.NotExposed.ExecShouldntCare
