cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Morten Kolstad
maintainer:         morten.kolstad@bekk.no

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md



executable lib
    main-is: Main.hs
    build-depends:    base, containers, QuickCheck, HUnit,
    hs-source-dirs:   lib
    default-language: Haskell2010
    other-modules: Api,List, NonEmpty, TestUtil        
